@@ -1,0 +1,4 @@
+procedure Second is
+begin
+   null;
+end Second;
